--- a/Itemmain/index.html
+++ b/Itemmain/index.html
@@ -48,20 +48,72 @@
         <!--main-->
         <div class="top_big_container">
             <div class="top_left_box">
-                <div class="top_left_box_child1">PERFUMEPERFUME <br>PERFUME</div>
-                <div class="top_left_box_child2">향수 문구 어쩌구 저쩌구,<br>어쩌구 저쩌구 어쩌구 저쩌구 어쩌구 저쩌구</div>
+                <p class="top_left_box_child1">PERFUMEPERFUME <br>PERFUME</p>
+                <p class="top_left_box_child2">꽃잎은 떨어져도 지지 않는다,<br>그 향기가 세상에 남아,우리의 기억속을 깊이 찌르고 있었다...</p>
             </div>
             <div class="top_right_box"></div>
         </div>
-        <div class="background_container">
-            <div class="middle_left_box"></div>
-            <div class="middle_right_box">
-                <div class="slide_box">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+        <div class="middle_big_container">
+            <div class="middle_flex_container">
+                <div class="middle_left_box">
+                    <p class="middle_left_box_child1">big text text<br>text</p>
+                    <p class="middle_left_box_child2">small text text</p>
                 </div>
+                <div class="middle_right_container">
+                    <div class="middle_right_box">
+                        <ul class="slide_box">
+                            <li class="slide_item"><a href="#"><img
+                                        src="../image/pexels-karolina-grabowska-8361484.jpg"></a></li>
+                            <li class="slide_item"><a href="#"><img
+                                        src="../image/pexels-karolina-grabowska-8361486.jpg"></a></li>
+                            <li class="slide_item"><a href="#"><img
+                                        src="../image/pexels-karolina-grabowska-8361492.jpg"></a></li>
+                            <li class="slide_item"><a href="#"><img
+                                        src="../image/pexels-karolina-grabowska-8361526.jpg"></a></li>
+                        </ul>
+                        <div class="slide_buttonbox">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom_big_container">
+            <div class="menubox_container">
+                <div class="menu1">category1</div>
+                <div class="menu2">category2</div>
+                <div class="menu3">category3</div>
+                <div class="menu4">category4</div>
+                <div class="menu5">category5</div>
+                <div class="menu6">category6</div>
+            </div>
+            <div class="menubox_horizon"></div>
+            <div class="bottom_row_itemsbox">
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a>dddd</div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+            </div>
+            <div class="bottom_row_itemsbox">
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+            </div>
+            <div class="bottom_row_itemsbox">
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+            </div>
+            <div class="bottom_row_itemsbox">
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
+                <div><a href="#"><img src="../image/pexels-karolina-grabowska-8361538.jpg"></a></div>
             </div>
         </div>
         <!-- footer -->
